# 6DOF-Arm

./: README.md
onshape_to_robot/: onshape_to_robot_config.json  regenerate_urdf.sh
src/arm_bringup/: package.xml  setup.py
src/arm_bringup/launch/: arm_bringup.launch.py
src/arm_control/: CMakeLists.txt  hardware.xml  package.xml
src/arm_control/config/: ros2_controllers.yaml
src/arm_control/include/arm_control/: hardware.hpp
src/arm_control/include/control/: hardware.hpp
src/arm_control/launch/: arm_control.launch.py
src/arm_control/src/: hardware.cpp
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/assets/: 6mm_bearing_v2.part  6mm_bearing_v2__2.part  6mm_bearing_v2__2.stl  base.part  base.stl  base_cover.part  base_cover.stl  hex_nut_grade_a___b_m2x0_4__3c416b87f78c3d5d8c04a06ae4c9fdad.part  hex_nut_grade_a___b_m2x0_4__3c416b87f78c3d5d8c04a06ae4c9fdad.stl  hex_nut_grade_a___b_m4x0_7__3c05376c0eb43b7b72d1a58e9ab268ae.part  hex_nut_grade_a___b_m4x0_7__3c05376c0eb43b7b72d1a58e9ab268ae.stl  joint_2_connecter.part  joint_2_connecter.stl  joint_2_connecter1.part  joint_2_connecter1.stl  joint_2_connecter2.part  joint_2_connecter2.stl  large_support.part  large_support__2.part  large_support__2.stl  link__9b93bac3b3b26990f011e90599b8f64f.part  link__9b93bac3b3b26990f011e90599b8f64f.stl  link__rotation_default_length__cm___10.part  link__rotation_default_length__cm___10.stl  link__rotation_perpendicular_length__cm___8.part  link__rotation_perpendicular_length__cm___8.stl  pca9685_v18.part  pca9685_v18.stl  servo_base.part  servo_base__2.part  servo_base__2.stl  small_support.part  small_support.stl  wheel_gear_v6.part  wheel_gear_v6__2.part  wheel_gear_v6__3.part  wheel_gear_v6__3.stl  wheel_v5.part  wheel_v5.stl  wheel_v5__2.part
src/arm_description/srdf/: arm.srdf
src/arm_description/urdf/: arm.urdf  arm.urdf.xacro  arm_ros2_control.xacro
src/arm_execution_manager/: CMakeLists.txt  package.xml
src/arm_execution_manager/include/arm_execution_manager/: arm_execution_manager.hpp
src/arm_execution_manager/src/: arm_execution_manager.cpp
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  servo.yaml
src/arm_mtc_tasks/: CMakeLists.txt  package.xml
src/arm_mtc_tasks/action/: Manipulation.action
src/arm_mtc_tasks/include/arm_mtc_tasks/planning_scene_manager/: planning_scene_manager.hpp
src/arm_mtc_tasks/include/arm_mtc_tasks/server/: task_server.hpp
src/arm_mtc_tasks/include/arm_mtc_tasks/task_context/: task_context.hpp
src/arm_mtc_tasks/include/arm_mtc_tasks/tasks/: pickup_task.hpp
src/arm_mtc_tasks/src/planning_scene_manager/: planning_scene_manager.cpp
src/arm_mtc_tasks/src/server/: task_server.cpp
src/arm_mtc_tasks/src/tasks/: pickup_task.cpp
src/arm_operator/: package.xml  setup.cfg  setup.py
src/arm_operator/arm_operator/: operator.py
